<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">CreateAndScheduleCampaign</string>
    <string name="action_settings">Settings</string>
    <string name="kMsgLoading">Loading&#8230;</string>

    <!-- Login activity -->
    <string name="API_KEY">vczc33krngd6w735fta8eus6</string>
    <string name="REDIRECT_URL">http://www.constantcontact.com/index.jsp</string>
    <string name="BASE_URL">https://oauth2.constantcontact.com/</string>
    <string name="AUTHORIZATION_ENDPOINT">oauth2/oauth/siteowner/authorize</string>

    <!-- Email campaign activity -->
    <string name="kLblEmailCampaignTitle">Create email campaign</string>
    <string name="kLblCampaignName">Campaign Name</string>
    <string name="kLblSubject">Subject</string>
    <string name="kLblFromName">From name</string>
    <string name="kLblFromEmailAddress">From Email</string>
    <string name="kLblReplyEmailAddress">Reply Email</string>
    <string name="kLblSendToLists">Send to Lists</string>
    <string name="kLblEmailContent">Email Content</string>
    <string name="kLblTextContent">Text Content</string>
    <string name="kLblOrganizationName">Organization</string>
    <string name="kLblAddress1">Address 1</string>
    <string name="kLblAddress2">Address 2</string>
    <string name="kLblAddress3">Address 3</string>
    <string name="kLblCity">City</string>
    <string name="kLblState">State</string>
    <string name="kLblPostalCode">Postal Code</string>
    <string name="kLblCountry">Country</string>

    <!-- Contact Lists activity -->
    <string name="kMsgChooseLists">Choose lists</string>
    <string name="kLblSave">Save</string>  
    <string name="hello_world">Hello world!</string>
    
    <!-- Schedule activity -->
    <string name="kLblScheduleEmailCampaignTitle">Schedule email campaign</string>
    <string name="kLblDate">Date</string>
    <string name="kLblTime">Time</string>
    <string name="kLblSchedule">Schedule</string>
    
    
</resources>