<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:padding="10dp" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="172dp"
        android:columnCount="1"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblCampaignName"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtCampaignName"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblSubject"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtSubject"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblFromName"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtFromName"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblFromEmailAddress"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtFromEmailAddress"
                android:layout_weight="0.7"
                android:inputType="textEmailAddress"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblReplyEmailAddress"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtReplyEmailAddress"
                android:layout_weight="0.7"
                android:inputType="textEmailAddress"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblSendToLists"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtSendToLists"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblEmailContent"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtEmailContent"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp"
                tools:ignore="TextFields" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblTextContent"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtTextContent"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblOrganizationName"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtOrganizationName"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblAddress1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtAddress1"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblAddress2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtAddress2"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblAddress3"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtAddress3"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblCity"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtCity"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblState"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtState"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblPostalCode"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtPostalCode"
                android:layout_weight="0.7"
                android:inputType="number"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp" >

            <TextView
                android:layout_weight="0.3"
                android:text="@string/kLblCountry"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/txtCountry"
                android:layout_weight="0.7"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"
                android:width="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center_horizontal"
            android:padding="0dp" >

            <Button
                android:id="@+id/btnSave"
                android:text="@string/kLblSave" />
        </TableRow>
    </TableLayout>

</ScrollView>